fix dashed border on mobile cards

--- a/app/(pages)/home/_sections/showcase/section-11.module.css
+++ b/app/(pages)/home/_sections/showcase/section-11.module.css
@@ -137,7 +137,7 @@
   &.personInViewport {
     @media (--mobile) {
       box-shadow: 0 0 24px 8px rgba(127, 255, 195, 0.7);
-      border-color: var(--color-teal);
+      border-color: rgba(0, 131, 70, 0.5);
       border-style: dashed;
     }
   }
